<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_height="wrap_content"
                                                   android:layout_width="match_parent">

    <TextView
            android:layout_width="0dp"
            android:id="@+id/automaticNotificationSettingsTitle"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:paddingTop="20dp"
            android:minHeight="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/settingsNotificationsMode"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_height="wrap_content"/>


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="@+id/automaticNotificationSettingsTitle"
            app:layout_constraintEnd_toEndOf="@+id/automaticNotificationSettingsTitle"
            app:layout_constraintTop_toBottomOf="@+id/automaticNotificationSettingsTitle"
            app:layout_constraintBottom_toTopOf="@+id/dialogOk">

        <RadioGroup
                android:id="@+id/notificationModeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/notificationTypeManual"
                    android:text="@string/notificationModeManualTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            <RadioButton
                    android:text="@string/notificationModeAutoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notificationTypeAuto"
                    android:layout_weight="1" android:textSize="18sp"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/autoNotificationsPreferencesContainer"
                          android:orientation="vertical"
                          android:visibility="gone"
                          android:paddingStart="16dp">
            </LinearLayout>

        </RadioGroup>
    </ScrollView>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/dialogOk"
            android:text="@android:string/ok"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialogCancel"
            android:text="@android:string/cancel"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/dialogOk"
            app:layout_constraintTop_toTopOf="@+id/dialogOk"
            app:layout_constraintBottom_toBottomOf="@+id/dialogOk"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>